--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -r dotenv/config index.js"
+    "dev": "nodemon -r dotenv/config index.js",
+    "start": "pm2 --no-daemon index.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "mailgun-js": "^0.10.1",
     "moment": "^2.18.1",
     "morgan": "^1.8.1",
+    "pm2": "^2.4.6",
     "promise-mysql": "^3.0.1",
     "superagent": "^3.5.2"
   },
