--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon -r dotenv/config index.js",
-    "start": "pm2 --no-daemon index.js"
+    "start": "pm2 start --no-daemon index.js"
   },
   "repository": {
     "type": "git",
